Bug 245969 - Hitting back and returning to Investment details page of the new investment wizard clears all fields
Summary: Hitting back and returning to Investment details page of the new investment w...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-28 02:22 UTC by Alvaro Soliverez
Modified: 2010-07-28 14:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alvaro Soliverez 2010-07-28 02:22:00 UTC
Version:           unspecified (using KDE 4.4.5) 
OS:                Linux

When editing an investments, hit back on the investment details, then next to come back to it. The fields are all cleared.

Reproducible: Always

Steps to Reproduce:
edit an investment
hit next on the type of investment page
- the investment details shows all fields with existing data of the account
hit back
hit next to come back to the investment details page


Actual Results:  
all fields are empty

Expected Results:  
the fields should show the existing data for the account or whatever has been edited until before hitting back
Comment 1 Thomas Baumgart 2010-07-28 14:15:53 UTC
SVN commit 1156002 by tbaumgart:

Make sure, the back button does not clear fields in the wizard

BUG: 245969

 M  +3 -0      knewinvestmentwizard.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1156002