Make sure, the back button does not clear fields in the wizard

BUG: 245969

svn path=/trunk/extragear/office/kmymoney/; revision=1156002