kmymoney/wizards/newinvestmentwizard/knewinvestmentwizard.cpp
@@ -97,6 +97,9 @@ void KNewInvestmentWizard::init1(void)
 {
   m_onlineUpdatePage->slotSourceChanged(false);
 
+  // make sure, the back button does not clear fields
+  setOption(QWizard::IndependentPages, true);
+  
   // enable the help button
   setOption(HaveHelpButton, true);
   connect(this, SIGNAL(helpRequested()), this, SLOT(slotHelp(void)));
